Apply suggestions from code review

--- a/docs/references/javascript/clerk/organization-switcher.mdx
+++ b/docs/references/javascript/clerk/organization-switcher.mdx
@@ -1,5 +1,4 @@
 ---
-
 title: <OrganizationSwitcher /> Component
 description: The <OrganizationSwitcher /> component is used to enable the ability to switch between available organizations the user may be part of in your application.
 ---
@@ -262,7 +261,7 @@ All props below are optional.
   cells: [
   <code>defaultOpen</code>,
   <code>boolean</code>,
-  <>Controls the default state of the `<OrganizationSwitcher />`,
+  <>Controls the default state of the {"<OrganizationSwitcher />"}</>,
   ],
   },
   ]}
