--- a/docs/references/javascript/organization/organization.mdx
+++ b/docs/references/javascript/organization/organization.mdx
@@ -59,7 +59,7 @@ Updates an organization's attributes.
   headings={["Type", "Description"]}
   headingsMeta={[{},{maxWidth: '300px'}]}
   rows={[
-  {cells: [ <code>Promise{"<"}<a href=/docs/references/javascript/organization/organization">Organization</a>{">"}</code>, <>This method returns a <code>Promise</code> which resolves to an Organization.</>]},
+  {cells: [ <code>Promise{"<"}<a href="/docs/references/javascript/organization/organization">Organization</a>{">"}</code>, <>This method returns a <code>Promise</code> which resolves to an Organization.</>]},
   ]}
 />
 
