remove mdx syntax from jsx

--- a/docs/references/javascript/clerk/organization-profile.mdx
+++ b/docs/references/javascript/clerk/organization-profile.mdx
@@ -87,7 +87,7 @@ function mountOrganizationProfile(node: HTMLDivElement, props?: OrganizationProf
   cells: [
   "props?",
   <a href="#organization-profile-props"><code>OrganizationProfileProps</code></a>,
-  "The properties to pass to the `<OrganizationProfile />` component",
+  "The properties to pass to the {"<OrganizationProfile />"} component",
   ],
   },
   ]}
