--- a/docs/references/javascript/clerk/organization-switcher.mdx
+++ b/docs/references/javascript/clerk/organization-switcher.mdx
@@ -192,14 +192,14 @@ All props below are optional.
   cells: [
   <code>createOrganizationUrl</code>,
   <code>string</code>,
-  <>Full URL or path where the `<CreateOrganization />` component is mounted.</>,
+  <>Full URL or path where the {"<CreateOrganization />'} component is mounted.</>,
   ],
   },
   {
   cells: [
   <code>organizationProfileUrl</code>,
   <code>string</code>,
-  <>Full URL or path where the `<OrganizationProfile />` component is mounted.</>,
+  <>Full URL or path where the {"<OrganizationProfile />"} component is mounted.</>,
   ],
   },
   {
@@ -208,8 +208,8 @@ All props below are optional.
   <code>'modal' | 'navigation'</code>,
   <>
   Controls whether clicking the "Create organization" button will cause
-  the `<CreateOrganization />` component to open as a modal, or if the browser will navigate
-  to the <code>createOrganizationUrl</code> where <code>CreateOrganization</code> is mounted as a page.
+  the {"<CreateOrganization />"} component to open as a modal, or if the browser will navigate
+  to the <code>createOrganizationUrl</code> where {"<CreateOrganization />"} is mounted as a page.
   <br/>
   Defaults to: <code>"modal"</code>
   </>,
@@ -221,8 +221,8 @@ All props below are optional.
   <code>'modal' | 'navigation'</code>,
   <>
   Controls whether clicking the "Manage organization" button will cause
-  the `<OrganizationProfile />` component to open as a modal, or if the browser will navigate
-  to the <code>organizationProfileUrl</code> where <code>OrganizationProfile</code> is mounted as a page.
+  the {"<OrganizationProfile />"} component to open as a modal, or if the browser will navigate
+  to the <code>organizationProfileUrl</code> where {"<OrganizationProfile />"} is mounted as a page.
   <br/>
   Defaults to: <code>"modal"</code>
   </>,
@@ -248,7 +248,7 @@ All props below are optional.
   <code>boolean</code>,
   <>
   By default, users can switch between organization and their personal account.
-  This option controls whether `<OrganizationSwitcher />` will include the user's personal account
+  This option controls whether {"<OrganizationSwitcher />"} will include the user's personal account
   in the organization list. Setting this to `false` will hide the personal account entry,
   and users will only be able to switch between organizations.
   <br/>
