--- a/docs/references/javascript/clerk/user-button.mdx
+++ b/docs/references/javascript/clerk/user-button.mdx
@@ -87,7 +87,7 @@ function mountUserButton(node: HTMLDivElement, props?: UserButtonProps): void;
   cells: [
   "props?",
   <a href="#user-button-props"><code>UserButtonProps</code></a>,
-  "The properties to pass to the `<UserButton />` component",
+  "The properties to pass to the {"<UserButton />"} component",
   ],
   },
   ]}
@@ -238,7 +238,7 @@ All props below are optional.
   <code>userProfileProps</code>,
   <code>object</code>,
   <>
-  Specify options for the underlying `<UserProfile />` component.
+  Specify options for the underlying {"<UserProfile />"} component.
   <br/>
   e.g. <code>{"{additionalOAuthScopes: {google: ['foo', 'bar'], github: ['qux']}}"}</code>
   </>,
