--- a/docs/references/javascript/clerk/user-button.mdx
+++ b/docs/references/javascript/clerk/user-button.mdx
@@ -87,7 +87,7 @@ function mountUserButton(node: HTMLDivElement, props?: UserButtonProps): void;
   cells: [
   "props?",
   <a href="#user-button-props"><code>UserButtonProps</code></a>,
-  "The properties to pass to the {"<UserButton />"} component",
+  "The properties to pass to the `<UserButton />` component",
   ],
   },
   ]}
