--- a/docs/references/javascript/clerk/organization-switcher.mdx
+++ b/docs/references/javascript/clerk/organization-switcher.mdx
@@ -192,7 +192,7 @@ All props below are optional.
   cells: [
   <code>createOrganizationUrl</code>,
   <code>string</code>,
-  <>Full URL or path where the {"<CreateOrganization />'} component is mounted.</>,
+  <>Full URL or path where the {"<CreateOrganization />"} component is mounted.</>,
   ],
   },
   {
