--- a/docs/deployments/deploy-to-vercel.mdx
+++ b/docs/deployments/deploy-to-vercel.mdx
@@ -33,7 +33,7 @@ Once you've selected a project to deploy, you'll be directed to the **Configure 
 
 On this page, make sure to add **[Environment Variables](https://vercel.com/docs/concepts/projects/environment-variables)** from [your app's Clerk dashboard](https://dashboard.clerk.com/) so that your Vercel project will be connected to your Clerk app properly:
 
-![The **Configure Project** page allows you to add environment variables, select a framework preset, and more](/docs/images/deployment-guides/vercel-configure-project.png)
+![The "Configure Project" page allows you to add environment variables, select a framework preset, and more](/docs/images/deployment-guides/vercel-configure-project.png)
 
 The API keys added on this screen will be assigned to all deployments on Vercel, including preview URLs. To connect your first deployment to your Clerk app, be sure to **use your Clerk production API keys rather than your development API keys**.
 
