--- a/docs/deployments/deploy-to-vercel.mdx
+++ b/docs/deployments/deploy-to-vercel.mdx
@@ -27,7 +27,7 @@ Create a new project by pressing the **Add New** button in the top right corner 
 
 Once done, you'll see the option to import a Git repository. Find the repository you want to use and press **Import**:
 
-![An **Import Git Repository** screen provides a few options, including selecting an organization and list of related repositories to import](/docs/images/deployment-guides/vercel-import-git-repository.png)
+![An "Import Git Repository" screen provides a few options, including selecting an organization and list of related repositories to import](/docs/images/deployment-guides/vercel-import-git-repository.png)
 
 Once you've selected a project to deploy, you'll be directed to the **Configure Project** page.
 
