--- a/docs/deployments/deploy-to-vercel.mdx
+++ b/docs/deployments/deploy-to-vercel.mdx
@@ -51,7 +51,7 @@ To add your Clerk API keys to an existing Vercel project, start by selecting you
 
 On the details page for your project, go to **Settings** in the navigation bar at the top:
 
-![When you open a project, there's a list of navigation items at the top. At the end of these items is **Settings**](/docs/images/deployment-guides/vercel-project-details.png)
+![When you open a project, there's a list of navigation items at the top. At the end of these items is "Settings"](/docs/images/deployment-guides/vercel-project-details.png)
 
 In the **Settings** sidebar, select **Environment Variables** and add your API keys from [your Clerk dashboard](https://dashboard.clerk.com/):
 
