--- a/docs/deployments/deploy-to-vercel.mdx
+++ b/docs/deployments/deploy-to-vercel.mdx
@@ -55,7 +55,7 @@ On the details page for your project, go to **Settings** in the navigation bar a
 
 In the **Settings** sidebar, select **Environment Variables** and add your API keys from [your Clerk dashboard](https://dashboard.clerk.com/):
 
-![In the project settings for a Vercel project, there's a list of settings. Four items from the bottom is **Environment Variables**](/docs/images/deployment-guides/vercel-environmental-variables.png)
+![In the project settings for a Vercel project, there's a list of settings. Four items from the bottom is "Environment Variables"](/docs/images/deployment-guides/vercel-environmental-variables.png)
 
 When adding **Environment Variables**, you can select which keys associate with which Vercel deployment Environments.
 
