--- a/docs/quickstarts/fastify.mdx
+++ b/docs/quickstarts/fastify.mdx
@@ -72,7 +72,7 @@ This examples uses `dontenv` to load the environment variables. You can use any 
   ```
 </CodeBlockTabs>
 
-### Configure `clerkPlugin` in your fastify application
+### Configure `clerkPlugin` in your Fastify application
 
 The Clerk plugin can be registered globally or for specific routes. This examples registers the plugin globally.
 
