--- a/docs/quickstarts/nextjs.mdx
+++ b/docs/quickstarts/nextjs.mdx
@@ -303,7 +303,8 @@ export default function handler(req: NextApiRequest, res: NextApiResponse) {
 }
 ```
 
-In some cases, you may need the full user object. For example, if you wanted to access the user's email address or name. You can use the `clerkClient` helper to get the full user object.
+In some cases, you may need the full user object. For example, if you want to access the user's email address or name. You can use the `clerkClient` helper to get the full user object.
+
 
 ```tsx copy filename="pages/api/auth.ts"
 import { getAuth, clerkClient } from "@clerk/nextjs/server";
