--- a/docs/references/javascript/clerk/handle-navigation.mdx
+++ b/docs/references/javascript/clerk/handle-navigation.mdx
@@ -26,7 +26,7 @@ When users click on magic links they get redirected to the URL that was provided
 
 The `__clerk_status` query parameter is the outcome of the verification and can take three values: **verified**, **failed** or **expired**.
 
-The `__clerk_created_session` query parameter will hold the ID of the new session, if one was created as a result of the verification. Since the magic link can be opened at any device and not the one that originated the verification, the new session ID might not be available under [Client.sessions](/docs/references/javascript/client).
+The `__clerk_created_session` query parameter will hold the ID of the new session, if one was created as a result of the verification. Since the magic link can be opened at any device and not the one that originated the verification, the new session ID might not be available under [Client.sessions](/docs/references/javascript/client#properties).
 
 Magic link flows can be completed on the same device that they were initiated or on a completely different browser. For example, a user might start the magic link flow on their desktop browser, but click on the magic link from their mobile phone.
 
